--- a/TMS/TMS/packages.config
+++ b/TMS/TMS/packages.config
@@ -5,6 +5,7 @@
   <package id="cldrjs" version="0.4.4" targetFramework="net452" />
   <package id="EAGetMail" version="4.6.0.3" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="iTextSharp" version="5.5.10" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="jquery-globalize" version="1.1.1" targetFramework="net452" />
