Thy: Fix Layout day 1

--- a/TMS/TMS/TMS.csproj
+++ b/TMS/TMS/TMS.csproj
@@ -690,6 +690,7 @@
     <Content Include="Views\KnowledgeBase\Index.cshtml" />
     <Content Include="Views\FAQ\Detail.cshtml" />
     <Content Include="Views\Shared\KBLayout.cshtml" />
+    <Content Include="Views\Shared\_TopLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
