--- a/TMS/TMS/TMS.csproj
+++ b/TMS/TMS/TMS.csproj
@@ -319,6 +319,7 @@
     </Compile>
     <Compile Include="Schedulers\CheckToCloseTicketJob.cs" />
     <Compile Include="Schedulers\CheckOverdueTicketJob.cs" />
+    <Compile Include="Services\TicketHistoryService.cs" />
     <Compile Include="Services\PriorityMatrixService.cs" />
     <Compile Include="Services\SolutionService.cs" />
     <Compile Include="Services\TicketAttachmentService.cs" />
@@ -333,7 +334,7 @@
     <Compile Include="Services\BusinessRuleService.cs" />
     <Compile Include="Utils\FileUploader.cs" />
     <Compile Include="Services\UserRoleService.cs" />
-    <Compile Include="Utils\CustomAuthorizeAttribute.cs" />
+    <Compile Include="Utils\ValidateAttribute\CustomAuthorizeAttribute.cs" />
     <Compile Include="Utils\ConstantUtil.cs" />
     <Compile Include="Utils\GeneralUtil.cs" />
     <Compile Include="Utils\EmailUtil.cs" />
@@ -342,12 +343,14 @@
     <Compile Include="Utils\PredicateBuilder.cs" />
     <Compile Include="Utils\SentenceUtil.cs" />
     <Compile Include="Utils\TMSUtils.cs" />
-    <Compile Include="Utils\MaxFileSizeAttribute.cs" />
-    <Compile Include="Utils\TagFormatAttribute.cs" />
-    <Compile Include="Utils\ValidateDateAttribute.cs" />
-    <Compile Include="Utils\ValidateDateSQLAttribute.cs" />
-    <Compile Include="Utils\CompareValidateDateAttribute.cs" />
-    <Compile Include="Utils\ImageFileAttribute.cs" />
+    <Compile Include="Utils\ValidateAttribute\MaxFileSizeAttribute.cs" />
+    <Compile Include="Utils\ValidateAttribute\CustomRequiredAttribute.cs" />
+    <Compile Include="Utils\ValidateAttribute\PathFormatAttribute.cs" />
+    <Compile Include="Utils\ValidateAttribute\TagFormatAttribute.cs" />
+    <Compile Include="Utils\ValidateAttribute\ValidateDateAttribute.cs" />
+    <Compile Include="Utils\ValidateAttribute\ValidateDateSQLAttribute.cs" />
+    <Compile Include="Utils\ValidateAttribute\CompareValidateDateAttribute.cs" />
+    <Compile Include="Utils\ValidateAttribute\ImageFileAttribute.cs" />
     <Compile Include="ViewModels\CategoryViewModel.cs" />
     <Compile Include="ViewModels\BusinessRuleViewModel.cs" />
     <Compile Include="ViewModels\CriteriaViewModel.cs" />
@@ -364,6 +367,7 @@
     <Compile Include="ViewModels\RequesterTicketViewModel.cs" />
     <Compile Include="ViewModels\SolutionViewModel.cs" />
     <Compile Include="ViewModels\RequesterViewModel.cs" />
+    <Compile Include="ViewModels\TicketHistoryViewModel.cs" />
     <Compile Include="ViewModels\TicketSolveViewModel.cs" />
     <Compile Include="ViewModels\ProfileAdminViewModel.cs" />
     <Compile Include="ViewModels\SCItemViewModels.cs" />
@@ -694,6 +698,7 @@
     <Content Include="Views\KnowledgeBase\Index.cshtml" />
     <Content Include="Views\FAQ\Detail.cshtml" />
     <Content Include="Views\Shared\KBLayout.cshtml" />
+    <Content Include="Views\Ticket\History.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
